--- a/src/scss/view-popup.scss
+++ b/src/scss/view-popup.scss
@@ -68,6 +68,11 @@
     -webkit-backdrop-filter: blur(16.6px);
     background-color: rgba(80, 92, 109, .5);
   }
+  &.breadbutter-mask-transparent {
+    background: none;
+    backdrop-filter: none;
+    -webkit-backdrop-filter: none;
+  }
 }
 
 .breadbutter-popup {
@@ -349,7 +354,7 @@
   top: auto !important;
   //left: 50%!important;
   //right: auto!important;
-  bottom: 275px !important;
+  bottom: 100% !important;
   //margin-left: -232.5px;
   left: 10px !important;
   right: 10px !important;
@@ -358,6 +363,9 @@
   .breadbutter-floating-arrow-holder {
     text-align: center;
     display: block;
+  }
+  &.bb-hide {
+    display: none;
   }
 }
 
@@ -400,6 +408,10 @@
   overflow-y: visible;
   &.advance {
     overflow-y: visible;
+  }
+
+  &.bb-input-focusing {
+    //bottom: 200px;
   }
 
   .breadbutter-popup-wrapper {
